--- a/dbt_project.yml
+++ b/dbt_project.yml
@@ -4,6 +4,5 @@ config-version: 2
 require-dbt-version: [">=1.0.0", "<2.0.0"]
 
 vars:
-  shopify:
     shopify_database: FIVETRAN_DATABASE
-    shopify_schema: shopify_neenaswim
+    shopify_schema: SHOPIFY_NEENASWIM
