--- a/dbt_project.yml
+++ b/dbt_project.yml
@@ -5,4 +5,5 @@ require-dbt-version: [">=1.0.0", "<2.0.0"]
 
 vars:
     shopify_database: FIVETRAN_DATABASE
-    shopify_schema: SHOPIFY_NEENASWIM
+    shopify_union_schemas: ['SHOPIFY_OHPOLLYUK','SHOPIFY_OHPOLLYUS','SHOPIFY_BOANDTEE','SHOPIFY_NEENASWIM'] # use this if the data is in different schemas/datasets of the same database/project
+    shopify_union_databases: ['FIVETRAN_DATABASE'] # use this if the data is in different databases/projects but uses the same schema name
