--- a/dbt_project.yml
+++ b/dbt_project.yml
@@ -6,5 +6,4 @@ require-dbt-version: [">=1.0.0", "<2.0.0"]
 vars:
     shopify_union_schemas: ['SHOPIFY_OHPOLLY_UK','SHOPIFY_OHPOLLY_US','SHOPIFY_BOANDTEE','SHOPIFY_NEENASWIM'] # use this if the data is in different schemas/datasets of the same database/project
     shopify_union_databases: ['FIVETRAN_DATABASE'] # use this if the data is in different databases/projects but uses the same schema name
-    shopify:
-    shopify_order_line_custom: "{{ ref('stg_shopify__order_lines_custom') }}"
+    order_line_pass_through_columns: ["Name"]
